--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Profile</title>
     <link href="./index.css" rel="stylesheet">
 </head>
 <body>
     <img src="./lion.png" class="profileimg">
-    <h3 class="title">Changmin</h3>
+    <h3 class="title">Changmin Lee</h3>
     <p class="content">Frond-end Developer</p>
     <div class="box">
         <p>hello my name is changmin.</p>
