--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="./index.css" rel="stylesheet">
 </head>
 <body>
-    <img src="./lion.png" class="profileimg">
+    <img src="./main.png" class="profileimg">
     <h3 class="title">Changmin Lee</h3>
     <p class="content">Frond-end Developer</p>
     <div class="box">
